z-index fix

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -118,16 +118,19 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 %last-vote-title {
-  font-size: 32px;
-  text-transform: uppercase;
-  position: absolute;
-  font-weight: bold;
-  text-align: center;
-  height: 1em;
+  bottom: 0;
   display: none;
-
-  top: 0; left: 0; bottom: 0; right: 0;
+  font-size: 32px;
+  font-weight: bold;
+  height: 1em;
+  left: 0;
   margin: auto;
+  position: absolute;
+  right: 0;
+  text-align: center;
+  text-transform: uppercase;
+  top: 0;
+  z-index: 999;
 
   -ms-transform:rotate(-45deg); /* IE 9 */
   -webkit-transform:rotate(-45deg); /* Chrome, Safari, Opera */
@@ -160,7 +163,6 @@ h1, h2, h3, h4, h5, h6 {
   }
 }
 
-
 @-webkit-keyframes slidein {
   from {
     -webkit-transform: rotate(-45deg) scale(3);
@@ -171,7 +173,6 @@ h1, h2, h3, h4, h5, h6 {
   }
 }
 
-
 @-moz-keyframes slidein {
   from {
     transform: rotate(-45deg) scale(3);
@@ -181,9 +182,6 @@ h1, h2, h3, h4, h5, h6 {
     transform: rotate(-45deg) scale(1);
   }
 }
-
-
-
 
 @keyframes slidein {
   from {
